# Certus

./: .gitignore  AGENTS.md  CLAUDE.md  CLI_AGENT.md  CMakeLists.txt  README.md  build_certus.bat
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/knowledge/zh/Certus AI 研究系统核心应用/: _module.yaml  技术栈.md  架构设计.md  概述.md  编码规范.md
.qoder/repowiki/knowledge/zh/Certus 混合架构 AI 研究系统/: _module.yaml  技术栈.md  架构设计.md  概述.md  特殊配置与命令.md  编码规范.md
.qoder/repowiki/knowledge/zh/多平台智能搜索与报告生成代理/: _module.yaml  技术栈.md  架构设计.md  概述.md  编码规范.md
agent/: agent.py  agent_protocol.py  cache_cli.py  common.py  evolution.py  extractor.py  generator.py  orchestrator.py  planner.py  prompt_builder.py  runtime_paths.py  synthesizer.py  tool_router.py  typing_agent.py  workspace.py
agent/cache/: __init__.py  config.py  embedder.py  protocol_handler.py  store.py
agent/legacy/: evolution_agent.py
agent/profiles/: 4cf4eb83.json  4d199320.json  5d6451bd.json  c514755e.json  deepseek_extraction.json
agent/tests/: __init__.py  conftest.py  pytest.ini  test_cache_protocol.py  test_cache_store.py  test_core.py  test_integration.py  test_mock_search.py  test_orchestrator.py  test_platforms.py  test_protocol.py  test_runtime_api.py  test_synthesizer.py
agent/tests/mock_data/: extract_fail.json  search_deepseek_ok.json  search_platform_reject.json  search_timeout.json  synthesis_empty.json  synthesis_kimi_ok.json
docs/: architecture-plan.md  issues-log.md  战略变化建议.md
resources/: certus.rc
src/: main.cpp  main_gui.cpp  mainwindow.cpp  mainwindow.h
src/core/: agentmanager.cpp  agentmanager.h  browsermanager.cpp  browsermanager.h  database.cpp  database.h
src/pages/: configpage.cpp  configpage.h  memorypage.cpp  memorypage.h  monitorpage.cpp  monitorpage.h  platformpage.cpp  platformpage.h  repairpage.cpp  repairpage.h  searchpage.cpp  searchpage.h
src/tests/: test_crypto.cpp  test_database.cpp  test_jsonparser.cpp
src/ui/: icons.cpp  icons.h  minibarchart.cpp  minibarchart.h  stageprogress.cpp  stageprogress.h  theme.cpp  theme.h  toast.cpp  toast.h
src/utils/: crypto.cpp  crypto.h  jsonparser.cpp  jsonparser.h  logger.cpp  logger.h
